fix: mongoose pattern applied on product
