# product/swagger/product.yaml
@@ -253,11 +253,8 @@ components:
           type: number
         stockQuantity:
           type: integer
-        category:
-          type: object
-          properties: 
-            id: 
-              type: string
+        categoryId:
+          type: string
     Products:
       type: array
       items:
